[project]
name = "cable"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "avalanche-lib>=0.6.0",
    "equinox>=0.13.4",
    "jax[cuda13]>=0.9.0.1",
    "jaxtyping>=0.3.9",
    "optax>=0.2.7",
    "scikit-learn>=1.8.0",
    "timm>=1.0.24",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
